src/test/testFiles/valid/forLoop.manimdsl
let x = 0;
for i in range(1, 5, 2) {
    x = x + i;
}