src/test/testFiles/invalid/semanticErrors/voidTypeDeclaration.manimdsl
def func2(number x) {
    let z: number = x + 1;
}

let z = func2(5);